# Financial-Market-Project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  environment.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  schema.yaml
notebooks/: eda.ipynb
src/dsproject/: __init__.py  config.py
src/dsproject/data/: make_dataset.py  make_sample.py
src/dsproject/features/: build_features.py
src/dsproject/pipelines/: __init__.py  auto_process.py  cli.py
src/dsproject/utils/: io.py
tests/: test_cli_smoke.py  test_config.py  test_io_timestamp.py  test_make_dataset.py  test_make_sample.py
